...
  "cash": "Dinero",
  "to": "A",
  "my_location": "Mi ubicación",
  "min": "mín.",
  "earned_amount": "Monto ganado",
  "cancel": "Cancelar",
  "accept": "Aceptar",
  "call_customer_for_confirmation": "Llame al cliente para confirmar",
  "call": "Llamar",
  "are_you_sure_to_accept": "¿Estás seguro de aceptar?",
  "are_you_sure_to_cancel": "¿Estás seguro de cancelar?",
  "are_you_sure_to_ignore": "¿Estás seguro de que lo ignorarás?",
  "are_you_sure_to_confirm": "¿Estás seguro de confirmarlo?",
...
  "file_size_too_large": "El tamaño del archivo es demasiado grande",
  "attachment_sent": "Adjunto enviado",
  "amount_collect_from_customer": "Monto a cobrar al cliente",
  "already_paid_digitally": "Ya pagado digitalmente",
  "schedule": "Horario",
  "you_can_pay_the_amount_to_the_admin": "Puedes pagar el monto al administrador",
  "centro_de_pedidos": "Centro de Pedidos",
  "pedidos_disponibles": "Pedidos Disponibles",
  "tootli_requests": "Centro de Pedidos",
  "buscando_pedidos": "Buscando pedidos",
  "ver_detalles_de_los_limites": "Ver detalles de los límites de zonas",
  "Ver detalles de bonos": "Ver detalles de bonos",
  "recompensa_de_busqueda": "Recompensa de búsqueda",
  "elige_y_compra": "Elige y compra",
...
